--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@400;600;900&display=swap');
+:root {
+    /* Colores */
+    --azul: #336699;
+    --verde: #99CC00;
+}
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: var(--letra-principal);
+}
+html{
+    height: 100%;
+    background-color: var(--azul-fondo);
+    
+}
+body {
+    height: 100%;
+    margin:0 0;
+    padding:0;
+    font-family: sans-serif;
+    background-color: var(--azul-fondo);
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+a{
+    text-decoration: none;
+    color: var(--black);
+}
