--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,8 @@
 <div class="container">
     <div class="contenedor">
         <div class="titulo">
-            <h1>BIENVENIDOS AL PROYECTO DE ANIMACIONES POR MEDIO DE HTML, CSS Y JAVASCRIPT</h1>
+            <a href="/programacionAnimada" aria-label="link que envie a las tablas">
+                <h1>BIENVENIDOS AL PROYECTO DE ANIMACIONES POR MEDIO DE HTML, CSS Y JAVASCRIPT</h1>
+            </a>
         </div>
-        <!-------------------------- Texto de la pagina ------------------->
-        <div class="contenedor1">
-            <p>TEXTOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
-                OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
-            </p>
-        </div>
-        <!-------------------------- Iamgen --------------------->
-        <div class="imagenMov">
-        </div>
-    </div>
 </div>
