Se agrego modulo de formulario

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,11 +23,11 @@
                 FRAMEWORKS
             </button>
         </a>
-        <!-- <a href="/contacto" aria-label="link de contacto">
+        <a href="/formulario" aria-label="link de contacto">
             <button class="navbar-btn animacion-entrada" aria-label="business contacto" >
-                CONTACTO
+                FORMULARIO
             </button>
-        </a> -->
+        </a>
     </nav>
     <div class="profile-icon animacion-entrada">
         <a aria-label="link sin redireccion momentanea">
@@ -52,9 +52,9 @@
             FRAMWORKS
         </button>
     </a>
-    <!-- <a href="/contacto" aria-label="boton de contacto">
+    <a href="/formulario" aria-label="boton de contacto">
         <button class="navbar-btn2" aria-label="boton de contacto">
-            CONTACTO
+            FORMULARIO
         </button>
-    </a> -->
+    </a>
 </nav>
