Se completa front falta consumo de api

--- a/src/app/dynamic-list/dynamic-list.component.html
+++ b/src/app/dynamic-list/dynamic-list.component.html
@@ -1,8 +1,8 @@
 <form (ngSubmit)="guardarDatos()">
-  <input type="text" name="nombre" [(ngModel)]="datos.nombre" placeholder="Nombre" required>
-  <input type="text" name="apellido" [(ngModel)]="datos.apellido" placeholder="Apellido" required>
+  <input type="text" name="nombre" [(ngModel)]="datos.nombre" placeholder="Nombre" autocomplete="off" required>
+  <input type="text" name="apellido" [(ngModel)]="datos.apellido" placeholder="Apellido" autocomplete="off" required>
   <input type="number" name="edad" [(ngModel)]="datos.edad" placeholder="Edad" required>
-  <input type="text" name="ciudad" [(ngModel)]="datos.ciudad" placeholder="Ciudad" required>
+  <input type="text" name="ciudad" [(ngModel)]="datos.ciudad" placeholder="Ciudad" autocomplete="off" required>
   <button type="submit">Guardar</button>
   <div *ngIf="guardadoExitoso" class="success-message">
     ¡Los datos se guardaron correctamente!
