--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -1,2 +1,6 @@
 <navbar/>
+<div class="header">
+    <h1>POR FAVOR LLENA EL SIGUIENTE FORMULARIO DE TUS DATOS PERSONALES</h1>
+</div>
+<br>
 <dynamic-list></dynamic-list>
