--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="contenedor">
         <div class="titulo">
-            <a href="/programacionAnimada" aria-label="link que envie a las tablas">
+            <a href="/formulario" aria-label="link que envie a las tablas">
                 <h1>BIENVENIDOS AL PROYECTO DE ANIMACIONES POR MEDIO DE HTML, CSS Y JAVASCRIPT</h1>
             </a>
         </div>
