--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -28,12 +28,17 @@
                 FORMULARIO
             </button>
         </a>
+        <a href="/tablas" aria-label="link de contacto">
+            <button class="navbar-btn animacion-entrada" aria-label="business contacto" >
+                TABLAS
+            </button>
+        </a>
     </nav>
-    <div class="profile-icon animacion-entrada">
+    <!-- <div class="profile-icon animacion-entrada">
         <a aria-label="link sin redireccion momentanea">
             <i class="fas fa-user-circle"></i>
         </a>
-    </div>
+    </div> -->
 </header>
 <nav class="navbar-2"
     [ngClass]="{ 'navbar--activo' : active }">
@@ -55,6 +60,11 @@
     <a href="/formulario" aria-label="boton de contacto">
         <button class="navbar-btn2" aria-label="boton de contacto">
             FORMULARIO
+        </button>
+    </a>
+    <a href="/tablas" aria-label="link de contacto">
+        <button class="navbar-btn animacion-entrada" aria-label="business contacto" >
+            TABLAS
         </button>
     </a>
 </nav>
