--- a/src/app/dynamic-list/dynamic-list.component.css
+++ b/src/app/dynamic-list/dynamic-list.component.css
@@ -1,8 +1,7 @@
-/* formulario.component.css */
-form {
+/* form {
   width: 300px;
   margin: 20px auto;
-}
+} */
 
 input {
   width: 100%;
@@ -10,19 +9,89 @@ input {
   margin-bottom: 10px;
 }
 
-button {
+/* button {
   background-color: #4CAF50;
   color: white;
   padding: 10px 20px;
   border: none;
   cursor: pointer;
-}
-
+} */
+/* 
 button:hover {
   opacity: 0.8;
+} */
+
+/* .success-message {
+  color: #4CAF50;
+  margin-top: 10px;
+} */
+
+form input, form button, form .success-message {
+  opacity: 0;
+  animation: fadeIn 1.5s ease forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* form input, form button, form .success-message {
+  margin-bottom: 10px;
 }
 
 .success-message {
-  color: #4CAF50;
+  color: green;
+} */
+
+
+form {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Estilos para los campos de entrada */
+input[type="text"],
+input[type="number"] {
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+/* Estilos para el botón */
+button[type="submit"] {
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin: 10px 0;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+/* Estilos para el mensaje de éxito */
+.success-message {
   margin-top: 10px;
+  padding: 10px;
+  background-color: #d4edda;
+  border: 1px solid #c3e6cb;
+  border-radius: 4px;
+  color: #155724;
 }
