--- a/src/app/tabla-usuario/tabla-usuario.component.css
+++ b/src/app/tabla-usuario/tabla-usuario.component.css
@@ -1,8 +1,17 @@
 /* tabla.component.css */
+.tabla{
+  margin-top: 5%;
+  opacity: 1;
+}
 table {
     width: 80%;
     margin: 20px auto;
     border-collapse: collapse;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+  }
+  .tabla-visible{
+    opacity: 1;
   }
   
   th, td {
@@ -21,4 +30,18 @@ table {
   tr:hover {
     background-color: #ddd;
   }
-  
+
+  /* Estilos para el botón de eliminar en la tabla */
+.delete-button {
+  background-color: #dc3545; /* Color de fondo del botón */
+  color: #fff; /* Color de texto del botón */
+  border: none;
+  padding: 5px 10px;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.delete-button:hover {
+  background-color: #c82333; /* Color de fondo al pasar el ratón sobre el botón */
+}
