Se termina el codigo de practicas, codigo final

--- a/src/app/frameworks/frameworks.component.html
+++ b/src/app/frameworks/frameworks.component.html
@@ -9,7 +9,7 @@
               </div>
           </div>
     </div>
-    <!-- Dialogo de emilio -->
+    <!-- Dialogo -->
     <div class="dialogo" [ngClass]="activarCartel ? 'bubbleOff' : ''">
         <div class="bubble">
             @for (item of texto; track $index) {
@@ -21,7 +21,7 @@
             }
         </div>
     </div>
-    <div class="imagen">
+    <div class="imagen aparecer">
         <img src="../../assets/imgs/bolita.gif" alt="">
     </div>
 </div>
