--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,62 +9,57 @@
     </button>
     <nav class="navbar">
         <a href="/programacionAnimada" aria-label="link de nosotros">
-            <button class="navbar-btn animacion-entrada" aria-label="boton de nosotros" >
+            <button class="navbar-btn animacion-entrada" aria-label="boton de programacion animada" >
                 PROGRAMACIÓN ANIMADA
             </button>
         </a>
         <a href="/ventajas" aria-label="link de servicios">
-            <button class="navbar-btn animacion-entrada" aria-label="boton de servicios" >
+            <button class="navbar-btn animacion-entrada" aria-label="boton de ventajas" >
                 VENTAJAS
             </button>
         </a>
         <a href="/frameworks" aria-label="link de casos de exito">
-            <button class="navbar-btn animacion-entrada"  aria-label="boton casos de exito">
+            <button class="navbar-btn animacion-entrada"  aria-label="boton de frameworks">
                 FRAMEWORKS
             </button>
         </a>
-        <a href="/formulario" aria-label="link de contacto">
-            <button class="navbar-btn animacion-entrada" aria-label="business contacto" >
-                FORMULARIO
-            </button>
-        </a>
         <a href="/tablas" aria-label="link de contacto">
-            <button class="navbar-btn animacion-entrada" aria-label="business contacto" >
+            <button class="navbar-btn animacion-entrada" aria-label="boton de tablas" >
                 TABLAS
             </button>
         </a>
-    </nav>
-    <!-- <div class="profile-icon animacion-entrada">
-        <a aria-label="link sin redireccion momentanea">
-            <i class="fas fa-user-circle"></i>
+        <a href="/respuestaUsuario" aria-label="link de contacto">
+            <button class="navbar-btn animacion-entrada" aria-label="boton de respuesta de los usuarios" >
+                VER RESPUESTAS
+            </button>
         </a>
-    </div> -->
+    </nav>
 </header>
 <nav class="navbar-2"
     [ngClass]="{ 'navbar--activo' : active }">
     <a href="/programacionAnimada" aria-label="link de nosotros">
-        <button class="navbar-btn2" aria-label="boton de nosotros">
+        <button class="navbar-btn2" aria-label="boton de programacion animada">
             PROGRAMACIÓN ANIMADA
         </button>
     </a>
     <a href="/ventajas" aria-label="link de servicios">
-        <button class="navbar-btn2" aria-label="boton de servicios">
+        <button class="navbar-btn2" aria-label="boton de ventajas">
             VENTAJAS
         </button>
     </a>
     <a href="/frameworks" aria-label="link de casos de exito">
-        <button class="navbar-btn2" aria-label="boton de casos de exito">
-            FRAMWORKS
-        </button>
-    </a>
-    <a href="/formulario" aria-label="boton de contacto">
-        <button class="navbar-btn2" aria-label="boton de contacto">
-            FORMULARIO
+        <button class="navbar-btn2" aria-label="boton de frameworks">
+            FRAMEWORKS
         </button>
     </a>
     <a href="/tablas" aria-label="link de contacto">
-        <button class="navbar-btn animacion-entrada" aria-label="business contacto" >
+        <button class="navbar-btn animacion-entrada" aria-label="boton de tablas">
             TABLAS
+        </button>
+    </a>
+    <a href="/respuestaUsuario" aria-label="link de contacto">
+        <button class="navbar-btn animacion-entrada" aria-label="boton de respuesta de usuario">
+            VER RESPUESTAS
         </button>
     </a>
 </nav>
