--- a/src/app/programacion-animada/programacion-animada.component.html
+++ b/src/app/programacion-animada/programacion-animada.component.html
@@ -5,7 +5,7 @@
         <p>Las páginas web animadas son como lienzos digitales que cobran vida con cada movimiento del cursor y cada clic del usuario.</p>
         <p>Son la manifestación de la creatividad en la era digital, donde las imágenes, colores y formas se entrelazan en un baile armonioso para cautivar y deleitar a los espectadores.</p>
     </div>
-    <div class="img">
+    <div class="img aparecer">
         <img src="/assets/imgs/baile.gif" alt="Baile" id="imagen" (click)="redireccionar()">
         <div class="arrow-animation"></div>
     </div>
