--- a/src/app/ventajas/ventajas.component.html
+++ b/src/app/ventajas/ventajas.component.html
@@ -40,8 +40,8 @@
         </div>
       </div>
       <div class="contenerdor__derecho">
-        <div class="emilio__grande aparecer">
-          <img src="../../assets/imgs/octa.gif" alt="Emilio ITBF" (click)="aparecer(0)">
+        <div class="Icono__grande aparecer">
+          <img src="../../assets/imgs/octa.gif" alt="ventaja1" (click)="aparecer(0)">
         </div>
       </div>
     </div>
@@ -57,8 +57,8 @@
         </div>
       </div>
       <div class="contenerdor__derecho">
-        <div class="emilio__grande aparecer">
-          <img src="../../assets/imgs/cuadros.gif" alt="emilio itbf" (click)="aparecer(1)">
+        <div class="Icono__grande aparecer">
+          <img src="../../assets/imgs/cuadros.gif" alt="ventaja2" (click)="aparecer(1)">
         </div>
       </div>
     </div>
@@ -74,8 +74,8 @@
         </div>
       </div>
       <div class="contenerdor__derecho">
-        <div class="emilio__grande aparecer">
-          <img src="../../assets/imgs/circulo.gif" alt="EMILIO Itbf" (click)="aparecer(2)">
+        <div class="Icono__grande aparecer">
+          <img src="../../assets/imgs/circulo.gif" alt="ventaja3" (click)="aparecer(2)">
         </div>
       </div>
     </div>
@@ -91,8 +91,8 @@
         </div>
       </div>
       <div class="contenerdor__derecho">
-        <div class="emilio__grande aparecer">
-          <img src="../../assets/imgs/circulo1.gif" alt="ITBF Emilio" (click)="aparecer(3)">
+        <div class="Icono__grande aparecer">
+          <img src="../../assets/imgs/circulo1.gif" alt="ventaja4" (click)="aparecer(3)">
         </div>
       </div>
     </div>
@@ -108,8 +108,8 @@
       </div>
     </div>
     <div class="contenerdor__derecho">
-      <div class="emilio__grande aparecer">
-        <img src="../../assets/imgs/triangulo.gif" alt="itbf emilio" (click)="aparecer(4)">
+      <div class="Icono__grande aparecer">
+        <img src="../../assets/imgs/triangulo.gif" alt="ventaja5" (click)="aparecer(4)">
       </div>
     </div>
   </div>
@@ -125,8 +125,8 @@
         </div>
       </div>
       <div class="contenerdor__derecho">
-        <div class="emilio__grande aparecer">
-          <img src="../../assets/imgs/rombo.gif" alt="ITBF emilio" (click)="aparecer(5)">
+        <div class="Icono__grande aparecer">
+          <img src="../../assets/imgs/rombo.gif" alt="ventaja6" (click)="aparecer(5)">
         </div>
       </div>
     </div>
