--- a/src/app/frameworks/frameworks.component.css
+++ b/src/app/frameworks/frameworks.component.css
@@ -35,6 +35,18 @@
 }
 .imagen img{
     width: 80%;
+    border-radius: 10px;
+}
+.aparecer{
+  animation: appear 1s ease-in;
+}
+@keyframes appear {
+  from{
+    opacity: 0;
+  }
+  to{
+    width: 1;
+  }
 }
 
 /* Burbuja de dialogo */
