--- a/src/app/programacion-animada/programacion-animada.component.css
+++ b/src/app/programacion-animada/programacion-animada.component.css
@@ -45,12 +45,36 @@ p{
   .img {
     margin-top: 50px;
   }
+  .aparecer{
+    animation: appear 1s ease-in;
+  }
+  /* animacion */
+  @keyframes appear {
+    from{
+      opacity: 0;
+    }
+    to{
+      width: 1;
+    }
+  }
+  
+  @keyframes desaparecer {
+    from{
+      opacity: 1;
+    }
+    to{
+      opacity: 0;
+  
+    }
+  }
   
   #imagen {
     width: 300px;
     height: 300px;
     border-radius: 50%;
     cursor: pointer;
+    /* display: inline-block;
+    position: relative; */
     transition: transform 0.3s ease;
   }
   
@@ -68,6 +92,7 @@ p{
     background: url('https://www.w3.org/TR/SVG2/arrow.svg') no-repeat center;
     background-size: contain;
     animation: arrowClick 1s infinite alternate;
+    animation: appear 1s ease-in;
   }
   
 @keyframes arrowClick {
