--- a/src/app/tabla-usuario/tabla-usuario.component.css
+++ b/src/app/tabla-usuario/tabla-usuario.component.css
@@ -1,47 +1,105 @@
-/* tabla.component.css */
+/* Estilos generales para la tabla */
 .tabla{
-  margin-top: 5%;
-  opacity: 1;
+  margin-top: 60px;
+  margin-bottom: 50px;
 }
 table {
-    width: 80%;
-    margin: 20px auto;
-    border-collapse: collapse;
-    opacity: 0;
-    transition: opacity 0.5s ease;
-  }
-  .tabla-visible{
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px 0;
+  font-size: 18px;
+  text-align: left;
+  opacity: 0;
+  animation: fadeInTable 1s forwards;
+}
+@keyframes fadeInTable {
+  to {
     opacity: 1;
   }
-  
-  th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  th {
-    background-color: #f2f2f2;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
-  
-  tr:hover {
-    background-color: #ddd;
-  }
-
-  /* Estilos para el botón de eliminar en la tabla */
-.delete-button {
-  background-color: #dc3545; /* Color de fondo del botón */
-  color: #fff; /* Color de texto del botón */
-  border: none;
-  padding: 5px 10px;
-  border-radius: 3px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
 }
 
-.delete-button:hover {
-  background-color: #c82333; /* Color de fondo al pasar el ratón sobre el botón */
+/* Estilos para la cabecera */
+th, td {
+  padding: 12px 15px;
+}
+
+/* Colores alternados para las filas */
+tbody tr:nth-child(even) {
+  background-color: #f3f3f3;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #e9e9e9;
+}
+
+/* Estilos para el hover */
+tbody tr:hover {
+  background-color: #d1e0e0;
+  /* cursor: pointer; */
+}
+
+/* Estilos para la cabecera */
+thead th {
+  background-color: #333;
+  color: #ffffff;
+}
+
+/* Bordes para las celdas */
+th, td {
+  border: 1px solid #dddddd;
+}
+
+/* Animación para las filas */
+tbody tr {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUp 0.5s forwards;
+}
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Estilos para la tabla visible */
+.tabla-visible {
+  display: table;
+}
+
+/* Estilos para la cabecera */
+th, td {
+  padding: 12px 15px;
+}
+
+/* Colores alternados para las filas */
+tbody tr:nth-child(even) {
+  background-color: #f3f3f3;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #e9e9e9;
+}
+
+/* Estilos para el hover */
+tbody tr:hover {
+  background-color: #d1e0e0;
+  /* cursor: pointer; */
+}
+
+/* Estilos para la cabecera */
+thead th {
+  background-color: #333;
+  color: #ffffff;
+}
+
+/* Bordes para las celdas */
+th, td {
+  border: 1px solid #dddddd;
+}
+
+/* Estilos para la tabla visible */
+.tabla-visible {
+  display: table;
 }
