--- a/src/styles.css
+++ b/src/styles.css
@@ -30,3 +30,5 @@ a{
     text-decoration: none;
     color: var(--black);
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
